--- a/CrazyEightsProject/CrazyEights/src/main/AndroidManifest.xml
+++ b/CrazyEightsProject/CrazyEights/src/main/AndroidManifest.xml
@@ -26,6 +26,14 @@
             </intent-filter>
         </activity>
 
+        <activity
+            android:name=".GameActivity"
+            android:label="@string/app_name"
+            android:screenOrientation="portrait"
+            android:configChanges="orientation|keyboardHidden"
+            >
+        </activity>
+
     </application>
 
 </manifest>
