--- a/CrazyEightsProject/CrazyEights/src/main/AndroidManifest.xml
+++ b/CrazyEightsProject/CrazyEights/src/main/AndroidManifest.xml
@@ -30,7 +30,8 @@
             android:name=".GameActivity"
             android:label="@string/app_name"
             android:screenOrientation="portrait"
-            android:configChanges="orientation|keyboardHidden"
+            android:configChanges="orientation|keyboardHidden|screenSize"
+            android:theme="@style/FullscreenTheme">
             >
         </activity>
 
